--- a/index.html
+++ b/index.html
@@ -8,102 +8,111 @@
 </head>
 <body>
     <!-- site header -->
-    <a href="index.html">
-        <!-- akadem nashr logosi -->
-    </a>
-
-    <ul>
-        <li><a href="#">bosh sahifa</a></li>
-        <li><a href="#">kitoblar</a></li>
-        <li><a href="#">aksiyalar</a></li>
-        <li><a href="#">kontaktlar</a></li>
-    </ul>
-
-    <a href="#">Ro'yxatdan o'tish</a>
+    <header>
+        <a href="index.html">
+            <!-- akadem nashr logosi -->
+        </a>
+        <ul>
+            <li><a href="#">bosh sahifa</a></li>
+            <li><a href="#">kitoblar</a></li>
+            <li><a href="#">aksiyalar</a></li>
+            <li><a href="#">kontaktlar</a></li>
+        </ul>
+        <a href="#">Ro'yxatdan o'tish</a>
+    </header>
 
     <!-- hero -->
-    <hr>
-    <h2>Pythonda dasturlash asoslari</h2>
-    <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-    <a href="#">Buyurtma berish</a>
-    <hr>
-     <!-- PYTHON BOYICHA KITOB RASMI -->
+    <div>
+        <div>
+            <hr>
+            <h2>Pythonda dasturlash asoslari</h2>
+            <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+            <a href="#">Buyurtma berish</a>
+            
+        </div>
+         <!-- PYTHON BOYICHA KITOB RASMI -->
+    </div>
 
-
-     <!-- FEATURES -->
-     <hr> 
-     <h2>nega aynan akadem nashr</h2>
-
-     <ul>
-         <li>
-             <!-- feature rasmi -->
-             <h3>Oson buyurtma qilish</h3>
-             <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
-         </li>
-         <li>
-             <!-- feature rasmi -->
-             <h3>Eng sara kitoblar</h3>
-             <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
-         </li>
-         <li>
-             <!-- feature rasmi -->
-             <h3>Tez yetkazib berish</h3>
-             <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
-         </li>
-     </ul>
+    <!-- FEATURES -->
+     <div>
+         <hr>
+         <h2>nega aynan akadem nashr</h2>
+         <ul>
+             <li>
+                 <!-- feature rasmi -->
+                 <h3>Oson buyurtma qilish</h3>
+                 <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+             </li>
+             <li>
+                 <!-- feature rasmi -->
+                 <h3>Eng sara kitoblar</h3>
+                 <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+             </li>
+             <li>
+                 <!-- feature rasmi -->
+                 <h3>Tez yetkazib berish</h3>
+                 <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+             </li>
+         </ul>
+     </div>
 
 
      <!-- AKSIYA -->
-    <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
-    <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-    <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
-    <a href="#">Buyurtma berish</a>
+     <div>
+             <div>
+                 <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
+                 <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+                 <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+                 <a href="#">Buyurtma berish</a>
+             </div>
+         
+             <!-- AKSIYADAGII KITOBLAR TOPLMI RASMI -->
+     </div>
 
-    <!-- AKSIYADAGII KITOBLAR TOPLMI RASMI -->
 
-
-    <!-- site footer -->
-    <a href="index.html">
-        <!-- akadem nashr logosi -->
-    </a>
-
-    <ul>
-        <!--ijtimoiy tarmoqlar  -->
-        <li><a href="https://t.me/Temurbek_Umiriddinov" target="_blank">Akadem Nashr telegram kanali</a></li>
-        <li><a href="https://www.facebook.com/Temurbek_Umiriddinov" target="_blank">Akadem Nashr facebook sahifas</a></li>
-        <li><a href="https://www.instagram.com/temur.ake_02" target="_blank">Akadem Nashr instagram sahifasi</a></li>
-    </ul>
-
-    <hr>
-    <ul>
-        <li><a href="#">Bosh sahifa</a></li>
-        <li><a href="#">Kitoblar</a></li>
-        <li><a href="#">Aksiyalar</a></li>
-        <li><a href="#">Yangiliklar</a></li>
-        <li><a href="#">Kontaktlar</a></li>
-    </ul>
-
-    <ul>
-        <li><a href="#">Ilmiy nashrlar</a></li>
-        <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
-        <li><a href="#">Ma’rifiy nashrlar</a></li>
-        <li><a href="#">Lug’atlar</a></li>
-        <li><a href="#">Adabiy-badiiy nashrlar</a></li>
-        <li><a href="#">Abituriyentlar uchun</a></li>
-        <li><a href="#">Bolalar uchun</a></li>
-    </ul>
-
-    <ul>
-        <li><a href="#">Ko’p so’raladigan savollar</a></li>
-        <li><a href="#">Yetkazib berish haqida</a></li>
-        <li><a href="#">To’lov usullari haqida</a></li>
-    </ul>
-
-    <ul>
-        <li><a href="#">Bo’sh ish o’rinlari</a></li>
-        <li><a href="#">Biz bilan bog’lanish</a></li>
-        <li><a href="#">Maxfiylik nizomi</a></li>
-    </ul>
+     <!-- site footer -->
+    <div>
+        <div>
+            <a href="index.html">
+                <!-- akadem nashr logosi -->
+            </a>
+            <ul>
+                <!--ijtimoiy tarmoqlar  -->
+                <li><a href="https://t.me/Temurbek_Umiriddinov" target="_blank">Akadem Nashr telegram kanali</a></li>
+                <li><a href="https://www.facebook.com/Temurbek_Umiriddinov" target="_blank">Akadem Nashr facebook sahifas</a></li>
+                <li><a href="https://www.instagram.com/temur.ake_02" target="_blank">Akadem Nashr instagram sahifasi</a></li>
+            </ul>
+        </div>
+        <hr>
+        <div>
+            <ul>
+                <li><a href="#">Bosh sahifa</a></li>
+                <li><a href="#">Kitoblar</a></li>
+                <li><a href="#">Aksiyalar</a></li>
+                <li><a href="#">Yangiliklar</a></li>
+                <li><a href="#">Kontaktlar</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Ilmiy nashrlar</a></li>
+                <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
+                <li><a href="#">Ma’rifiy nashrlar</a></li>
+                <li><a href="#">Lug’atlar</a></li>
+                <li><a href="#">Adabiy-badiiy nashrlar</a></li>
+                <li><a href="#">Abituriyentlar uchun</a></li>
+                <li><a href="#">Bolalar uchun</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Ko’p so’raladigan savollar</a></li>
+                <li><a href="#">Yetkazib berish haqida</a></li>
+                <li><a href="#">To’lov usullari haqida</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Bo’sh ish o’rinlari</a></li>
+                <li><a href="#">Biz bilan bog’lanish</a></li>
+                <li><a href="#">Maxfiylik nizomi</a></li>
+            </ul>
+        </div>  
+    </div>
 
 </body>
 </html>
