--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uz">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
   </head>
   <body>
@@ -14,6 +14,8 @@
           src="images/logo@1x.svg"
           alt="AkademNashr logosi"
           srcset="images/logo@1x.svg 1x, images/logo@2x.svg 2x"
+          width="227"
+          height="59"
         />
       </a>
       <nav>
@@ -45,6 +47,8 @@
             src="images/python-book@1x.jpg"
             alt="python-book"
             srcset="images/python-book@1x.jpg 1x, images/python-book@2x.jpg 2x"
+            width="510"
+            height="510"
           />
         </section>
 
@@ -54,7 +58,7 @@
           <h2>nega aynan akadem nashr</h2>
           <ul>
             <li>
-              <img src="images/feature-icon.png" alt="features-icon" />
+              <img src="images/feature-icon.png" alt="features-icon" width="100" height="100" />
               <h3>Oson buyurtma qilish</h3>
               <p>
                 Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda
@@ -62,7 +66,7 @@
               </p>
             </li>
             <li>
-              <img src="images/feature-icon-1.png" alt="features-icon" />
+              <img src="images/feature-icon-1.png" alt="features-icon" width="100" height="100" />
               <h3>Eng sara kitoblar</h3>
               <p>
                 Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har
@@ -70,7 +74,7 @@
               </p>
             </li>
             <li>
-              <img src="images/feature-icon-2.png" alt="features-icon" />
+              <img src="images/feature-icon-2.png" alt="features-icon" width="100" height="100" />
               <h3>Tez yetkazib berish</h3>
               <p>
                 O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro
@@ -100,6 +104,8 @@
             src="images/sale-img@1x.jpg"
             alt="book-sale"
             srcset="images/sale-img@1x.jpg 1x, images/sale-img@2x.jpg 2x"
+            width="440"
+            height="440"
           />
         </section>
       </div>
@@ -114,26 +120,28 @@
               src="images/logo@1x.svg"
               alt="AkademNashr logosi"
               srcset="images/logo@1x.svg 1x, images/logo@2x.svg 2x"
+              width="227"
+              height="59"
             />
           </a>
           <ul>
             <!--ijtimoiy tarmoqlar  -->
             <li>
               <a href="https://t.me/Temurbek_Umiriddinov" target="_blank">
-                <img src="images/icon-telegram.svg" alt="Akadem Nashr telegram icon">
+                <img src="images/icon-telegram.svg" alt="Akadem Nashr telegram icon" width="24" height="24">
               </a>
             </li>
             <li>
               <a
                 href="https://www.facebook.com/Temurbek_Umiriddinov"
                 target="_blank">
-                <img src="images/icon-facebook.svg" alt="Akadem Nashr Facebook icon">
+                <img src="images/icon-facebook.svg" alt="Akadem Nashr Facebook icon" width="24" height="24">
                 </a
               >
             </li>
             <li>
               <a href="https://www.instagram.com/temur.ake_02" target="_blank">
-                <img src="images/icon-instagram.svg" alt="Akadem Nashr intagram icon">
+                <img src="images/icon-instagram.svg" alt="Akadem Nashr intagram icon" width="24" height="24">
                 </a
               >
             </li>
