--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           alt="AkademNashr logosi"
           srcset="images/logo@1x.svg 1x, images/logo@2x.svg 2x"
           width="227"
-          height="59"
+          height="60"
         />
       </a>
       <nav>
@@ -58,7 +58,7 @@
           <h2>nega aynan akadem nashr</h2>
           <ul>
             <li>
-              <img src="images/feature-icon.png" alt="features-icon" width="100" height="100" />
+              <img src="images/Icon-1.svg" alt="features-icon" width="48" height="48" />
               <h3>Oson buyurtma qilish</h3>
               <p>
                 Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda
@@ -66,7 +66,7 @@
               </p>
             </li>
             <li>
-              <img src="images/feature-icon-1.png" alt="features-icon" width="100" height="100" />
+              <img src="images/Icon-2.svg" alt="features-icon" width="44" height="44" />
               <h3>Eng sara kitoblar</h3>
               <p>
                 Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har
@@ -74,7 +74,7 @@
               </p>
             </li>
             <li>
-              <img src="images/feature-icon-2.png" alt="features-icon" width="100" height="100" />
+              <img src="images/Icon-3.svg" alt="features-icon" width="56" height="56" />
               <h3>Tez yetkazib berish</h3>
               <p>
                 O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro
@@ -121,7 +121,7 @@
               alt="AkademNashr logosi"
               srcset="images/logo@1x.svg 1x, images/logo@2x.svg 2x"
               width="227"
-              height="59"
+              height="60"
             />
           </a>
           <ul>
