--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               height="60"
             />
           </a>
-          <ul class="footer-list">
+          <ul class="site-footer-list">
             <!--ijtimoiy tarmoqlar  -->
             <li>
               <a href="https://t.me/Temurbek_Umiriddinov" target="_blank">
