--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
       height="60"
       />
     </a>
-    <nav class="sitenav">
-      <ul class="sitenav-list">
-        <li><a class="sitenav-link" href="#">bosh sahifa</a></li>
-        <li><a class="sitenav-link" href="#">kitoblar</a></li>
-        <li><a class="sitenav-link" href="#">aksiyalar</a></li>
-        <li><a class="sitenav-link" href="#">kontaktlar</a></li>
-      </ul>
-    </nav>
-    <a class="main-link" href="#">Ro'yxatdan o'tish</a>
+    <div class="site-header-right">
+      <nav class="sitenav">
+        <ul class="sitenav-list">
+          <li><a class="sitenav-link" href="#">bosh sahifa</a></li>
+          <li><a class="sitenav-link" href="#">kitoblar</a></li>
+          <li><a class="sitenav-link" href="#">aksiyalar</a></li>
+          <li><a class="sitenav-link" href="#">kontaktlar</a></li>
+        </ul>
+      </nav>
+      <a class="main-link" href="#">Ro'yxatdan o'tish</a>
+    </div>
   </header>
   <main>
     <div>
@@ -65,7 +67,7 @@
       <section class="features">
         <hr class="orange-line" />
         <h2 class="features-title">Nega aynan Akademnashr</h2>
-        <ul>
+        <ul class="features-list">
           <li class="feature">
             <div class="features-icon-wrapper">
               <img src="images/Icon-1.svg" alt="" width="56" height="56" />
@@ -131,7 +133,7 @@
   <!-- site footer -->
   <footer class="site-footer">
     <div>
-      <div>
+      <div class="social-network">
         <a href="index.html">
           <img
           src="images/logo@1x.svg"
@@ -141,7 +143,7 @@
           height="60"
           />
         </a>
-        <ul class="site-footer-list">
+        <ul class="site-footer-social-list">
           <!--ijtimoiy tarmoqlar  -->
           <li>
             <a href="https://t.me/Temurbek_Umiriddinov" target="_blank">
@@ -179,7 +181,7 @@
       </ul>
     </div>
     <hr class="site-footer-hr" />
-    <div>
+    <div class="site-footer-links">
       <ul class="site-footer-list">
         <li><a class="site-footer-link" href="#">Bosh sahifa</a></li>
         <li><a class="site-footer-link" href="#">Kitoblar</a></li>
