--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- site header -->
   <header class="site-header">
-    <a href="index.html">
+    <a  class="logo-link" href="index.html">
       <img
       src="images/logo@1x.svg"
       alt="AkademNashr logosi"
@@ -134,7 +134,7 @@
   <footer class="site-footer">
     <div>
       <div class="social-network">
-        <a href="index.html">
+        <a class="logo-link" href="index.html">
           <img
           src="images/logo@1x.svg"
           alt="AkademNashr logosi"
