add underline social

--- a/index.html
+++ b/index.html
@@ -105,16 +105,18 @@
       <section class="promo">
         <div class="promo-info">
           <h2 class="promo-title">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-          <p class="promo-text">
-            Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun
-            turli mashq qo’llanmalari va komikslar.
-          </p>
-          <p class="promo-text">
-            Aksiyadagi eng katta to’plamda
-            <strong class="promo-highlight">50 ta kitob</strong>ni
-            <strong class="promo-highlight">350 ming</strong> so’mga (aslida
-            383 ming so’m) sotib olishingiz mumkin.
-          </p>
+          <div class="promo-info-wrapper">
+            <p class="promo-text">
+              Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun
+              turli mashq qo’llanmalari va komikslar.
+            </p>
+            <p class="promo-text">
+              Aksiyadagi eng katta to’plamda
+              <strong class="promo-highlight">50 ta kitob</strong>ni
+              <strong class="promo-highlight">350 ming</strong> so’mga (aslida
+              383 ming so’m) sotib olishingiz mumkin.
+            </p>
+          </div>
           <a class="main-link" href="#">Buyurtma berish</a>
         </div>
         
