--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </main>
   
   <!-- site footer -->
-  <footer class="site-footer">
+  <footer class="site-footer footer">
     <div class="container">
       <div class="social-network">
         <a class="logo-link" href="index.html">
