--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="main-content">
     <div>
       <!-- hero -->
       <section class="hero">
